Run unit tests in single JVM because Prolog JNI (JPL) causes problems