@@ -80,6 +80,15 @@
 
 	<build>
 		<plugins>
+			<!-- Run unit tests in single JVM because Prolog JNI (JPL) causes problems -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine><![CDATA[-Djava.security.manager -Djava.security.policy=src/main/resources/proactive.java.policy]]></argLine>
+					<forkCount>0</forkCount>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-doap-plugin</artifactId>
